--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,24 @@
-##数据库信息
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.109.136:3306/test_login?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=cabbagelyeroot
+###数据库信息
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://192.168.109.136:3306/test_login?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8
+#spring.datasource.username=root
+#spring.datasource.password=cabbagelyeroot
+#
+#
+###开启驼峰映射 当为true时：mybatis-plus会将Java对象的驼峰式命名的常量转成下划线的方式
+#mybatis-plus.configuration.map-underscore-to-camel-case=true
+###扫描路径
+#mybatis-plus.mapper-locations=classpath*:mapper/**/*.xml
 
-
-##开启驼峰映射 当为true时：mybatis-plus会将Java对象的驼峰式命名的常量转成下划线的方式
-mybatis-plus.configuration.map-underscore-to-camel-case=true
-##扫描路径
-mybatis-plus.mapper-locations=classpath*:mapper/**/*.xml
 ##控制台打印sql
 logging.level.com.cabbagelye.login.simple.dao=debug
+#
+#
+##redis
+#spring.redis.host=192.168.109.136
+#spring.redis.port=6379
+#spring.redis.database=1
+#spring.redis.password=cabbagelyeroot
+#spring.redis.timeout=5000
 
-
-#redis
-spring.redis.host=192.168.109.136
-spring.redis.port=6379
-spring.redis.database=1
-spring.redis.password=cabbagelyeroot
-spring.redis.timeout=5000
 
