--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,10 @@ logging.level.com.cabbagelye.login.simple.dao=debug
 #spring.redis.password=cabbagelyeroot
 #spring.redis.timeout=5000
 
+##kafka
+spring.kafka.producer.bootstrap-servers=192.168.109.136:9092
+
+spring.kafka.consumer.bootstrap-servers=192.168.109.136:9092
+spring.kafka.consumer.group-id=test-consumer-group
+
 
