--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>2.3.4.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
